--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "heroku-postinstall": "ng build --prod"
+    "heroku-postbuild": "ng build --aot --prod"
   },
+  "heroku-run-build-script": true,
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
