--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "node ./server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "heroku-postbuild": "ng build --aot --prod"
+    "heroku-postbuild": "ng build --prod",
+    "postinstall": "ng build --aot --prod"
+
   },
   "private": true,
   "dependencies": {
